fix: the play area also now stretches

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ footer {
 #container {
     flex: 1;
     display: flex;
-    justify-content: center;
 }
 
 
@@ -38,7 +37,7 @@ footer {
 }
 #playArea{
     border: solid 1px grey;
-
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
